kubernetes/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mvertes/alpine-mongo
        resources:
          limits:
            memory: "512Mi"
            cpu: "256m"
        ports:
        - containerPort: 27017
          name: mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    name: default
    targetPort: mongodb
