kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: porto-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: porto-backend
  template:
    metadata:
      labels:
        app: porto-backend
    spec:
      containers:
        - image: khaosdoctor/event-sourcing-backend
          name: porto-backend
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 3000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: porto-backend
spec:
  selector:
    app: porto-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: porto-backend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: uri
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: porto-backend
                port:
                  name: http
